[tool.poetry]
name = "pyasic-super"
version = "0.1.0"
description = ""
authors = ["UpstreamData <brett@upstreamdata.ca>"]
readme = "README.md"
packages = [
    {include = "pyasic"},
    {include = "pyasic_api"},
    {include = "pyasic_web"},
    {include = "cfg_util"},
]

[tool.poetry.dependencies]
python = "^3.8"
pyasic = { path = "./pyasic/", develop = true }
pyasic_api = { path = "./pyasic_api/", develop = true }
pyasic_web = { path = "./pyasic_web/", develop = true }
cfg_util = { path = "./upstream_config_util/", develop = true, python = ">=3.8"}
pre-commit = "^2.21.0"
mkdocs = "^1.4.2"
mkdocstrings = "^0.19.1"
isort = "^5.11.4"
cx-Freeze = "^6.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
