[tool.poetry]
name = "pyasic-super"
version = "0.1.0"
description = ""
authors = ["UpstreamData <brett@upstreamdata.ca>"]
readme = "README.md"
packages = [
    {include = "pyasic"},
    {include = "pyasic_api"},
    {include = "pyasic_web"},
    {include = "upstream_config_util"},
]

[tool.poetry.dependencies]
python = "^3.8"
pyasic = { path = "./pyasic/", develop = true }
pyasic_api = { path = "./pyasic_api/", develop = true }
pyasic_web = { path = "./pyasic_web/", develop = true }
upstream_config_util = { path = "./upstream_config_util/", develop = true, python = ">=3.8" }
pre-commit = "^3.2.2"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
isort = "^5.12.0"
cx-Freeze = "^6.14.9"
asynctest = "^0.13.0"
djlint = "^1.25.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
